# job-search

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: api_server.py  crawler.py  db.py  db_init.py  db_schemas.proto  db_schemas_pb2.py  db_sync.py  job_tracker.db  llm.py  llm_examples.py  llm_prompts.py  logging.conf  prompt_catalog_initial.py  prompt_seed.py  utilities.py
backend/deprecated/: db_schemas_pb2.py  db_sync.py  deprecated_api_server.py  deprecated_crawler.py  deprecated_db.py  deprecated_llm.py
backend/llm_prompts/: generate_job_assessment.md  master_resume.md
backend/sql/: 02_create_job_details.sql  03_create_document_store.sql  04_create_run_findings.sql  06_create_llm_models.sql  07_create_llm_runs.sql  08_create_job_quarantine.sql  09_create_job_skills.sql  10_create_prompts.sql  11_create_llm_runs_v2.sql
backend/sql/deprecated/: 01_create_job_runs.sql  05_create_job_assessment.sql  migrate_document_store.py
docs/: 01_lead_generation_system.md  02A_lead_qualification_system_appendix.md  02_lead_qualification_system copy v1.md  02_lead_qualification_system copy v2.md  02_lead_qualification_system.md  03_firefox_extension.md  UTIL_01_set_up_bigquery_sync.md  prompt_builder.md
frontend/companion-firefox/: background.js
frontend/companion-firefox/dashboard/: dashboard.css  dashboard.html  dashboard.js
frontend/companion-firefox/history/: history.css  history.js
frontend/companion-firefox/session/: session.css  session.js
