[project]
name = "job-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "beautifulsoup4>=4.13.4",
    "fastapi[standard]>=0.116.1",
    "google-genai>=1.27.0",
    "lxml>=6.0.0",
    "markdownify>=1.1.0",
    "md2pdf>=1.0.1",
    "openai>=1.97.0",
    "pytest-playwright>=0.7.0",
]
