[project]
name = "job-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "beautifulsoup4>=4.13.4",
    "fastapi[standard]>=0.116.1",
    "lxml>=6.0.0",
    "markdownify>=1.1.0",
    "md2pdf>=1.0.1",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
]
